# PVTPackage

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS  CMakeLists.txt  CONTRIBUTORS  COPYRIGHT  NOTICE
PVTPackage/: CMakeLists.txt
PVTPackage/source/: CMakeLists.txt  PVTPackage.cpp  PVTPackage.hpp  plot_BO.m
PVTPackage/source/MultiphaseSystem/: BlackOilMultiphaseSystem.cpp  BlackOilMultiphaseSystem.hpp  BlackOilProperties.hpp  ComponentProperties.cpp  ComponentProperties.hpp  CompositionalMultiphaseSystem.cpp  CompositionalMultiphaseSystem.hpp  DeadOilMultiphaseSystem.cpp  DeadOilMultiphaseSystem.hpp  FlashVariables.hpp  FreeWaterMultiphaseSystem.cpp  FreeWaterMultiphaseSystem.hpp  MultiphaseSystem.cpp  MultiphaseSystem.hpp  MultiphaseSystemProperties.hpp  NegativeTwoPhaseMultiphaseSystem.cpp  NegativeTwoPhaseMultiphaseSystem.hpp  PVTEnums.hpp  PhaseModelOutputVariables.hpp  PhaseSplitModelOutputVariables.hpp  PropertyAndDerivatives.hpp  TrivialMultiphaseSystem.cpp  TrivialMultiphaseSystem.hpp
PVTPackage/source/MultiphaseSystem/MultiphaseSystemProperties/: BlackOilDeadOilMultiphaseSystemProperties.cpp  BlackOilDeadOilMultiphaseSystemProperties.hpp  BlackOilFlashMultiphaseSystemProperties.cpp  BlackOilFlashMultiphaseSystemProperties.hpp  CompositionalMultiphaseSystemProperties.cpp  CompositionalMultiphaseSystemProperties.hpp  DeadOilFlashMultiphaseSystemProperties.cpp  DeadOilFlashMultiphaseSystemProperties.hpp  FactorMultiphaseSystemProperties.cpp  FactorMultiphaseSystemProperties.hpp  FreeWaterFlashMultiphaseSystemProperties.cpp  FreeWaterFlashMultiphaseSystemProperties.hpp  NegativeTwoPhaseFlashMultiphaseSystemProperties.cpp  NegativeTwoPhaseFlashMultiphaseSystemProperties.hpp  TrivialFlashMultiphaseSystemProperties.cpp  TrivialFlashMultiphaseSystemProperties.hpp
PVTPackage/source/MultiphaseSystem/PhaseModel/: CubicEoSPhaseModel.cpp  CubicEosPhaseProperties.hpp  PhaseModel.cpp  PhaseModel.hpp  PhaseProperties.hpp
PVTPackage/source/MultiphaseSystem/PhaseModel/BackOil/: BlackOil_GasModel.cpp  BlackOil_OilModel.cpp  BlackOil_OillModel.hpp  BlackOil_Utils.cpp  BlackOil_WaterModel.cpp
PVTPackage/source/MultiphaseSystem/PhaseModel/BlackOil/: BlackOilDeadOilProperties.hpp  BlackOil_GasModel.cpp  BlackOil_GasModel.hpp  BlackOil_OilModel.cpp  BlackOil_OilModel.hpp  BlackOil_Utils.cpp  BlackOil_Utils.hpp  BlackOil_WaterModel.cpp  BlackOil_WaterModel.hpp  DeadOil_PhaseModel.cpp  DeadOil_PhaseModel.hpp  PVDdata.hpp  PVTGdata.hpp  PVTOdata.hpp  PVTWdata.hpp  Table.cpp
PVTPackage/source/MultiphaseSystem/PhaseModels/: CubicEoSPhase.cpp  CubicEoSPhase.hpp  Phase.cpp  Phase.hpp
PVTPackage/source/MultiphaseSystem/PhaseSplitModel/: BlackOilFlash.cpp  BlackOilFlash.hpp  CompositionalFlash.cpp  CompositionalFlash.hpp  DeadOilFlash.cpp  DeadOilFlash.hpp  Flash.cpp  Flash.hpp  FreeWaterFlash.cpp  FreeWaterFlash.hpp  NegativeTwoPhaseFlash.cpp  NegativeTwoPhaseFlash.hpp  TrivialFlash.cpp  TrivialFlash.hpp
PVTPackage/source/PVTModel/: ComponentProperties.hpp  CompositionalPVTModel.cpp  CompositionalPVTModel.hpp  FlashVariables.hpp  PVTEnums.hpp  PVTModel.cpp  PVTModel.hpp  PhaseModelOutputVariables.hpp  PhaseSplitModelOutputVariables.hpp
PVTPackage/source/PVTModel/Flash/: CompositionalFlash.cpp  CompositionalFlash.hpp  TrivialFlash.cpp  TrivialFlash.hpp
PVTPackage/source/PVTModel/PhaseModels/: CubicEoSPhaseModel.cpp  CubicEoSPhaseModel.hpp
PVTPackage/source/PVTModel/PhaseSplitModel/: CompositionalFlash.cpp  CompositionalFlash.hpp  TrivialFlash.cpp  TrivialFlash.hpp
PVTPackage/source/Utils/: Assert.hpp  File.cpp  File.hpp  FileUtils.hpp  LogMessage.cpp  LogMessage.hpp  Logger.cpp  Logger.hpp  StringUtils.cpp  StringUtils.hpp  Table.hpp  Timer.cpp  Timer.hpp  Types.hpp  macros.hpp  math.hpp  utils.hpp
PVTPackage/source/pvt/: pvt.cpp  pvt.hpp
PVTPackage/source/refactor/: CMakeLists.txt  JsonKeys.cpp  JsonKeys.hpp  TestFactor.cpp  TestFactor.hpp  testFirst.cpp  testParallel.cpp  testPublicApi.cpp
PVTPackage/source/refactor/data/: pvt_data.txt
PVTPackage/source/refactor/deserializers/: BlackOilDeadOilApiInputs.cpp  BlackOilDeadOilApiInputs.hpp  ComponentProperties.cpp  ComponentProperties.hpp  CompositionalApiInputs.cpp  CompositionalApiInputs.hpp  Flash.cpp  Flash.hpp  MultiphaseSystemProperties.cpp  MultiphaseSystemProperties.hpp  PVTEnums.hpp  PhaseModels.cpp  PhaseModels.hpp  PhaseProperties.cpp  PhaseProperties.hpp  PropertyAndDerivatives.cpp  PropertyAndDerivatives.hpp
PVTPackage/source/refactor/passiveDataStructures/: BlackOilDeadOilApiInputs.hpp  ComponentProperties.hpp  CompositionalApiInputs.cpp  CompositionalApiInputs.hpp  Flash.hpp  MultiphaseSystemProperties.cpp  MultiphaseSystemProperties.hpp  PVTEnums.hpp  PhaseModel.hpp  PhaseProperties.hpp  PropertyAndDerivatives.hpp
PVTPackage/source/refactor/serializers/: BlackOilModels.cpp  BlackOilModels.hpp  ComponentProperties.cpp  ComponentProperties.hpp  CubicEoSPhaseModel.cpp  CubicEoSPhaseModel.hpp  DeadOilPhaseModel.cpp  DeadOilPhaseModel.hpp  Flash.cpp  Flash.hpp  MultiphaseSystemProperties.cpp  PVTEnums.hpp  PropertyAndDerivatives.cpp  PropertyAndDerivatives.hpp
PVTPackage/source/tests/: CMakeLists.txt  JsonKeys.cpp  JsonKeys.hpp  TestFactor.cpp  TestFactor.hpp  testParallel.cpp  testPublicApi.cpp
PVTPackage/source/tests/data/: pvdw.txt  pvtg.txt
PVTPackage/source/tests/deserializers/: BlackOilDeadOilApiInputs.cpp  BlackOilDeadOilApiInputs.hpp  CMakeLists.txt  CompositionalApiInputs.cpp  CompositionalApiInputs.hpp  MultiphaseSystemProperties.hpp  PVTEnums.hpp  PropertyAndDerivatives.cpp  PropertyAndDerivatives.hpp
PVTPackage/source/tests/passiveDataStructures/: BlackOilDeadOilApiInputs.cpp  BlackOilDeadOilApiInputs.hpp  CMakeLists.txt  CompositionalApiInputs.cpp  CompositionalApiInputs.hpp  MultiphaseSystemProperties.cpp  MultiphaseSystemProperties.hpp  PVTEnums.hpp  PropertyAndDerivatives.hpp
PVTPackage/source/tests/serializers/: CMakeLists.txt  MultiphaseSystemProperties.cpp  MultiphaseSystemProperties.hpp
cmake/: PVTPackage.cmake
docs/: main.rst
examples/Example1/: CMakeLists.txt  main.cpp
(+17 files in other folders)
